# sigil

./: .env.template  .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
skill/: SKILL.md
src/sigil/: __init__.py  analyze.py  cli.py  config.py  constants.py  models.py  push.py  sanitize.py  timestamps.py
src/sigil/parsers/: __init__.py  base.py  claude.py  codex.py  openclaw.py
src/sigil/storage/: __init__.py  base.py  clickhouse.py  iceberg.py  local.py
tests/: conftest.py  helpers.py  test_analyze.py  test_config.py  test_iceberg.py  test_models.py  test_openclaw_parser.py  test_parsers.py  test_push.py  test_sanitize.py  test_storage.py
