[project]
name = "sigil"
version = "0.1.0"
description = "Collect, store, and analyze AI usage data across modalities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
sigil = "sigil.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sigil"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
